[gd_scene load_steps=2 format=3 uid="uid://bvq8h3m5yn7rf"]

[ext_resource type="Script" uid="uid://dc4aa1mxgd0vq" path="res://UI/InventoryUI.gd" id="1_inventory"]

[node name="InventoryUI" type="CanvasLayer"]
script = ExtResource("1_inventory")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TopBar" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="Panel/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Inventory"

[node name="CategoryButtons" type="HBoxContainer" parent="Panel/VBoxContainer/TopBar"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TotalItemsLabel" type="Label" parent="Panel/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Total Items: 0"
horizontal_alignment = 2

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer/TopBar"]
layout_mode = 2
text = "Close"

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ItemGrid" type="GridContainer" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 5

[node name="DetailsPanel" type="VBoxContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="PlaceholderLabel" type="Label" parent="Panel/VBoxContainer/DetailsPanel"]
layout_mode = 2
text = "Select an item to view details"
horizontal_alignment = 1
vertical_alignment = 1
